renderizado de formulario y mapa

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/styles/index.css">
 </head>
 <body>
-    <h1>holi</h1>
+    <main>
+        <form>
+            <div class="form-group">
+                <label for="form-name">Nombre: </label>
+                <input class="form-control" type="text" id="form-name" placeholder="Av. E. Madero 1020">
+            </div>
+            <div class="form-group">
+                <label for="form-address">Dirección: </label>
+                <input class="form-control" type="text" id="form-address" placeholder="Av. E. Madero 1020">
+            </div>
+            <div class="form-group">
+                <label for="form-phone">Teléfono: </label>
+                <input class="form-control" type="text" id="form-phone" placeholder="549 11 5272 0900">
+            </div>
+            <div class="form-group">
+                <label for="form-category">Categoría</label>
+                <select class="form-control" id="form-category">
+                    <option>Comercial</option>
+                    <option>Residencial</option>
+                    <option>Mixta</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="">Coord: </label>
+                <input class="form-control" type="text" placeholder="Av. E. Madero 1020">
+            </div>
+
+            <button type="submit" class="btn btn-primary">Agregar</button>
+        </form>
+        <section>
+            <div id="map"></div>
+        </section>
+    </main>
+
+    <script src="assets/scripts/index.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOh10fPx91COg5clFbGhFMbaXg_Lq3tRU&callback=initMap"async defer></script>
 </body>
 </html>
