--- a/pages/index.html
+++ b/pages/index.html
@@ -13,15 +13,15 @@
         <form id="my-form">
             <div class="form-group">
                 <label for="form-name">Nombre: </label>
-                <input class="form-control" type="text" id="form-name" placeholder="Av. E. Madero 1020">
+                <input class="form-control" type="text" id="form-name" placeholder="Aeroterra" required>
             </div>
             <div class="form-group">
                 <label for="form-address">Dirección: </label>
-                <input class="form-control" type="text" id="form-address" placeholder="Av. E. Madero 1020">
+                <input class="form-control" type="text" id="form-address" placeholder="Av. E. Madero 1020" required>
             </div>
             <div class="form-group">
                 <label for="form-phone">Teléfono: </label>
-                <input class="form-control" type="text" id="form-phone" placeholder="549 11 5272 0900">
+                <input class="form-control" type="text" id="form-phone" placeholder="549 11 5272 0900" required>
             </div>
             <div class="form-group">
                 <label for="form-category">Categoría</label>
@@ -33,8 +33,8 @@
             </div>
             <div class="form-group">
                 <label for="">Coordenadas: </label>
-                <input class="form-control" number="text" id="form-coord-lat" placeholder="lat: -34.6131500">
-                <input class="form-control" number="text" id="form-coord-lng" placeholder="lng: -58.3772300">
+                <input class="form-control" type="number" id="form-coord-lat" placeholder="lat: -34.6131500" step="any">
+                <input class="form-control" type="number" id="form-coord-lng" placeholder="lng: -58.3772300" step="any">
             </div>
 
             <button type="submit" class="btn btn-primary" >Agregar</button>
@@ -44,6 +44,7 @@
         </section>
     </main>
 
+    <script src="dist/pristine.js"  type="text/javascript"></script>
     <script src="assets/scripts/index.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOh10fPx91COg5clFbGhFMbaXg_Lq3tRU&callback=initMap"async defer></script>
 </body>
