--- a/pages/index.html
+++ b/pages/index.html
@@ -46,6 +46,6 @@
 
     <script src="dist/pristine.js"  type="text/javascript"></script>
     <script src="assets/scripts/index.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOh10fPx91COg5clFbGhFMbaXg_Lq3tRU&callback=initMap"async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=[API_KEY]"async defer></script>
 </body>
 </html>
